added: endpoints do create and consult users and the init file for the databse
